fixing  some bugs in my textutils app. But about page dark mode and overall redish darkmode is not optimized till now.

--- a/02-textutils/src/App.css
+++ b/02-textutils/src/App.css
@@ -1,3 +1,8 @@
 .hide {
   display: none;
 }
+/* body {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+} */
